--- a/src/app/src/main/res/values/themes.xml
+++ b/src/app/src/main/res/values/themes.xml
@@ -8,4 +8,14 @@
         <item name="colorOnSecondary">@color/ev_bg_dim</item>
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     </style>
+
+    <style name="Theme.KillApps.Dialog" parent="Theme.MaterialComponents.DayNight.Dialog">
+        <item name="colorPrimary">@color/ev_bg_dim</item>
+        <item name="colorPrimaryVariant">@color/ev_bg0</item>
+        <item name="colorOnPrimary">@color/ev_fg</item>
+        <item name="colorSecondary">@color/ev_blue</item>
+        <item name="colorOnSecondary">@color/ev_bg_dim</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
 </resources>
